Soliding station now use FluidStack as input to craft